tests/netconvert/import/XML/errors/broken_edge/edge#priority__false4/errors.netconvert
Error: Attribute 'priority' in definition of edge '4' is not of type int.
Quitting (on error).
